advanced_plain/security.tf
resource "aws_security_group" "alb" {
  name_prefix = "alb-sg-${local.environment}-"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "ALBSecurityGroup-${local.environment}"
    Environment = local.environment
  }
}

resource "aws_security_group" "ec2" {
  name_prefix = "ec2-sg-${local.environment}-"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "EC2SecurityGroup-${local.environment}"
    Environment = local.environment
  }
}
